// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader Component should render a basic component: basic 1`] = `
<PageHeader>
  <Flex
    justifyContent={
      {
        "sm": "justifyContentSpaceBetween",
      }
    }
  >
    <FlexItem>
      <PageHeaderTitle
        className="pf-u-mb-sm"
        title={
          <span
            className="test"
          >
            lorem
          </span>
        }
      />
    </FlexItem>
  </Flex>
</PageHeader>
`;

exports[`PageHeader Component should render string node types: string 1`] = `
<pageheader
  props="{
  "children": [
    {}
  ],
  "productLabel": null
}"
>
  <section
    class="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
    widget-type="InsightsPageHeader"
  >
    <div
      class="pf-l-flex pf-m-justify-content-space-between-on-sm"
    >
      <div
        class=""
      >
        <h1
          class="pf-c-title pf-m-2xl pf-u-mb-sm"
          data-ouia-component-id="OUIA-Generated-Title-1"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
          widget-type="InsightsPageHeaderTitle"
        >
          dolor sit
        </h1>
      </div>
    </div>
  </section>
</pageheader>
`;

exports[`PageHeader Component should render the subtitle when viewId is provided: with subtitle 1`] = `
<pageheader
  props="{
  "productLabel": "RHEL",
  "children": [
    {}
  ]
}"
>
  <section
    class="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
    widget-type="InsightsPageHeader"
  >
    <div
      class="pf-l-flex pf-m-justify-content-space-between-on-sm"
    >
      <div
        class=""
      >
        <h1
          class="pf-c-title pf-m-2xl pf-u-mb-sm"
          data-ouia-component-id="OUIA-Generated-Title-2"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
          widget-type="InsightsPageHeaderTitle"
        >
          lorem
        </h1>
      </div>
    </div>
    <p>
      t(curiosity-view.subtitle, {"appName":"Subscriptions","context":"RHEL"}, [object Object])
    </p>
  </section>
</pageheader>
`;
